--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-<h1>Hello!</h1>
+<html>
+  <head>
+    <title>Pro Bono Finance</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style>
+      .center {
+        padding: 70px 0;
+        text-align: center;
+      }
+      .about {
+        padding: 10px 70px;
+        text-align: center;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="center">
+      <h1>Pro Bono Finance</h1>
+      <div class="about">
+        <p>Retired actuary providing free advice for financial freedom.</p>
+        <p>
+          Expert in managing insurance companies, investment funds, and personal
+          wealth.
+        </p>
+        <p>Let's navigate this journey together! 🌟</p>
+      </div>
+      <h2>Contact us</h2>
+      <p>
+        <a href="https://www.reddit.com/user/probonofinance" target="_blank"
+          >Reddit</a
+        >
+      </p>
+      <p>
+        <a href="mailto: pbonofinance@gmail.com">pbonofinance@gmail.com</a>
+      </p>
+    </div>
+  </body>
+</html>
