--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
     <title>Pro Bono Finance</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
+      body {
+        background-color: #f4f0e8;
+      }
       .center {
         padding: 70px 0;
-        text-align: center;
-      }
-      .about {
-        padding: 10px 70px;
         text-align: center;
       }
     </style>
@@ -16,23 +15,24 @@
   <body>
     <div class="center">
       <h1>Pro Bono Finance</h1>
-      <div class="about">
+      <h2>About</h2>
+      <div>
         <p>Retired actuary providing free advice for financial freedom.</p>
         <p>
           Expert in managing insurance companies, investment funds, and personal
           wealth.
         </p>
         <p>Let's navigate this journey together! 🌟</p>
+        <p>
+          Feel free to drop me a message
+          <a href="mailto: pbonofinance@gmail.com">pbonofinance@gmail.com</a>
+        </p>
       </div>
-      <h2>Contact us</h2>
-      <p>
-        <a href="https://www.reddit.com/user/probonofinance" target="_blank"
-          >Reddit</a
-        >
-      </p>
-      <p>
-        <a href="mailto: pbonofinance@gmail.com">pbonofinance@gmail.com</a>
-      </p>
+      <h2>Articles</h2>
+      <p>How much wealth do I need to be financially independent?</p>
+      <p>What assets should I keep my wealth in?</p>
+      <p>How to exploit currency arbitrage to maximise real wealth?</p>
+      <p>You can only manage what you can measure</p>
     </div>
   </body>
 </html>
