--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     />
 
     <div class="card">
+      <!--Profile Picture-->
       <div class="card-avatar">
         <svg viewBox="0 0 208 278">
           <g transform="matrix(0.1,0,0,-0.1,-31.2625,284.904)">
@@ -80,23 +81,23 @@
 
         <div class="card-about">
           <div class="item">
-            <span class="value">37</span>
-            <span class="label">Age</span>
+            <span class="value">17</span>
+            <span class="label">YOE</span>
           </div>
           <div class="item">
-            <span class="value">85 kg </span>
+            <span class="value">85kg </span>
             <span class="label">Weight</span>
           </div>
           <div class="item">
-            <span class="value">175 cm</span>
+            <span class="value">175cm</span>
             <span class="label">Height</span>
           </div>
         </div>
         <div class="skills">
           <span class="value"
-            >Financial Wizard (Actuary), Goal-Setting Prowess, Invulnerability
-            to Financial Turbulence, Enhanced Projection Skill</span
-          >
+            >Financial Wizard (Actuary), Enhanced Projection Vision,
+            Goal-Setting Prowess, Volatility Invulnerability,
+          </span>
         </div>
       </div>
     </div>
