--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
       <div class="card-details">
         <div class="name">Pro Bono Finance</div>
         <div class="occupation">Wealth Trainer</div>
+        <div><address style="font-size:12px;"">pbonofinance@gmail.com</address></div>
 
         <div class="card-about">
           <div class="item">
@@ -85,18 +86,19 @@
             <span class="label">YOE</span>
           </div>
           <div class="item">
-            <span class="value">85kg </span>
-            <span class="label">Weight</span>
+            <span class="value">FIAA </span>
+            <span class="label">License</span>
           </div>
           <div class="item">
-            <span class="value">175cm</span>
-            <span class="label">Height</span>
+            <span class="value">AU,HK,MY</span>
+            <span class="label">Regions</span>
           </div>
         </div>
         <div class="skills">
-          <span class="value"
-            >Financial Wizard (Actuary), Enhanced Projection Vision,
-            Goal-Setting Prowess, Volatility Invulnerability,
+          <span class="value">Money Sorcerer,
+            X-Ray Projection Wizardry,
+            Target Thrashing Prowess,
+            Volatility Kryptonite
           </span>
         </div>
       </div>
