--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
       <div class="card-details">
         <div class="name">Pro Bono Finance</div>
         <div class="occupation">Wealth Trainer</div>
-        <div><address style="font-size:12px;"">pbonofinance@gmail.com</address></div>
+        <div>
+          <address style="font-size: 12px">pbonofinance@gmail.com</address>
+        </div>
 
         <div class="card-about">
           <div class="item">
@@ -95,10 +97,9 @@
           </div>
         </div>
         <div class="skills">
-          <span class="value">Money Sorcerer,
-            X-Ray Projection Wizardry,
-            Target Thrashing Prowess,
-            Volatility Kryptonite
+          <span class="value"
+            >Money Sorcerer, X-Ray Projection Wizardry, Target Thrashing
+            Prowess, Volatility Kryptonite
           </span>
         </div>
       </div>
