--- a/index.html
+++ b/index.html
@@ -104,5 +104,37 @@
         </div>
       </div>
     </div>
+    <div class="cardnoimage">
+      <div></div>
+      <div class="card-details">
+        <div class="name">Our Mission</div>
+        <div class="skills">
+          <span class="value">
+            Offering pro bono financial planning, we empower everyone on their
+            path to financial freedom. Leveraging our wealth management
+            expertise, we focus on efficient wealth tracking, expense
+            minimization, and asset optimization for your financial security.
+          </span>
+        </div>
+        <br />
+        <div class="occupation">Milestone Mastery</div>
+        <div class="skills">
+          <span class="value">
+            Fully refundable $100 USD fee upon reaching the agreed short-term
+            milestone adds motivation for implementing successful wealth
+            strategies, ensuring a commitment to financial success.
+          </span>
+        </div>
+        <br />
+        <div class="occupation">Donations</div>
+        <div class="skills">
+          <span class="value"
+            >Help our cause by donating ETH here:
+            0x719ED78688a8Cf61a59E7533D32cEe96765D61aa
+          </span>
+        </div>
+      </div>
+    </div>
+    <div style="padding: 1em"></div>
   </body>
 </html>
