remove some info

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             minimization, and asset optimization for your financial security.
           </span>
         </div>
-        <br />
+        <!-- <br />
         <div class="occupation">Milestone Mastery</div>
         <div class="skills">
           <span class="value">
@@ -132,7 +132,7 @@
             >Help our cause by donating ETH here:
             0x719ED78688a8Cf61a59E7533D32cEe96765D61aa
           </span>
-        </div>
+        </div> -->
       </div>
     </div>
     <div style="padding: 1em"></div>
